<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".JoinActivity">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:padding="12dp"
        android:textColor="@color/colorAccent"
        android:text="@string/create_account" />

    <TextView
        android:layout_gravity="center_horizontal"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:text="@string/create_account_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_account" />

    <TextView
        android:id="@+id/textview_login_instead"
        android:textColor="@color/colorPrimary"
        android:text="@string/create_account_login_instead"
        android:textAlignment="center"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:id="@+id/textview_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Already exists!" />


</LinearLayout>
