<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    tools:context=".MainActivity"
    android:clipToPadding="false"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.card.MaterialCardView
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:contentPaddingTop="12dp"
        android:paddingBottom="12dp"
        android:minHeight="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/train_search" />

                <TextView
                    android:id="@+id/date"
                    android:onClick="selectDate"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2019-05-16" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"    >

                    <TextView android:id="@+id/time"
                        android:onClick="selectTime"
                        style="@style/TextAppearance.MaterialComponents.Headline2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:textColor="@android:color/primary_text_light"
                        android:text="12:34" />

                    <TextView android:id="@+id/tv_search_type"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/time"
                        android:layout_alignParentEnd="true"
                        android:text="까지" />
                </RelativeLayout>
            </LinearLayout>
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/by_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/by_dep"
                    android:layout_height="0dp"
                    android:layout_width="0dp"
                    android:text="@string/by_depart"/>
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/by_arr"
                    android:layout_height="0dp"
                    android:layout_width="0dp"
                    android:text="@string/by_arrival"/>
            </com.google.android.material.tabs.TabLayout>

            <View
                style="@style/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/origin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/select_origin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:focusable="false"
                        android:clickable="true"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/destination"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/select_dest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:focusable="false"
                        android:clickable="true"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="startSearch"
        />

</androidx.constraintlayout.widget.ConstraintLayout>